[package]
name = "db-bench"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "db_bench"
path = "src/main.rs"

[dependencies]
lsm-tree = { path = "../..", features = ["lz4", "zstd"] }
clap = { version = "4", features = ["derive"] }
hdrhistogram = "7"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
